# hydrocli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: contest-todo.md  distribution.md  install.md  user-guide.md
scripts/: _build-env.sh  build-dist.sh  build-pex.sh  build-portable.sh  build-pyinstaller.sh
src/hydro_cli/: __init__.py  cli.py  client.py  config.py  contest.py  errors.py  parsing.py  problem.py  record.py  submit.py  utils.py
tests/: test_cli_config.py  test_cli_display.py  test_cli_version.py  test_client.py  test_config.py  test_contest.py  test_contest_cli.py  test_parsing.py  test_problem.py  test_problem_cli.py  test_record.py
