[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydro-cli"
dynamic = ["version"]
description = "Terminal client for Hydro OJ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
hydro = "hydro_cli.cli:main"

[project.urls]
Homepage = "https://github.com/237sfz/hydrocli"
Repository = "https://github.com/237sfz/hydrocli"
Issues = "https://github.com/237sfz/hydrocli/issues"

[tool.hatch.version]
path = "src/hydro_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hydro_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
